objects/rrde__RRD_Exception_Log__c.object
<CustomObject>
    <description>Logs all exceptions for user information.</description>
    <fields>
        <fullName>rrde__Error_Cause__c</fullName>
        <label>Error Cause</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rrde__Exception_Line_No__c</fullName>
        <label>Exception Line No.</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rrde__Message__c</fullName>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <label>RRD Exception Log</label>
    <nameField>
        <displayFormat>RRDEL{0000}</displayFormat>
        <label>RRD Exception Log No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RRD Exception Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>